--- a/src/styles.scss
+++ b/src/styles.scss
@@ -47,6 +47,8 @@
 .showScroll {
   overflow-y: auto;
   scroll-behavior: auto;
+  margin-left: -10px;
+  margin-right: -10px;
 }
 
 .pageHeight {
@@ -89,6 +91,11 @@ textarea {
 }
 .beautifier {
   font-size: large;
+  
+}
+.tooltip-inner{
+max-width: 100% !important;
+padding: 10px;
 }
 
 .btn-primary {
@@ -117,4 +124,8 @@ textarea {
   color: white;
   font-size: medium;
   font-weight: 500;
+}
+.icons {
+  margin-right: 5px;
+  font-size: x-large;
 }
